GNOME Bugzilla – Bug 744296
Fix format string signedness warnings
Last modified: 2015-03-26 18:14:06 UTC
GCC 5.0, with its new -Wformat-signedness, warns about the sign being different between a type and the format string in printf-format messages, and udisks enables -Wformat=2 as part of its default warnings (which eventually causes the build to fail).
Created attachment 296549 [details] [review] proposed patch Fixes the build for me.
Thanks!
Hey Michael, thanks for committing this. The commit however broke the string freeze. Can you please branch for gnome-3-16 before this commit?
Yes, sorry about that.