Fix format string signedness warnings

GCC 5.0, with its new -Wformat-signedness, warns about the sign being
different between a type and the format string in printf-format
messages. Fix the sign of the format strings and types so that they
match.

https://bugzilla.gnome.org/show_bug.cgi?id=744296